--- a/OpenGLProject/OpenGLProject.vcxproj
+++ b/OpenGLProject/OpenGLProject.vcxproj
@@ -290,6 +290,7 @@
     <ClInclude Include="button.hpp" />
     <ClInclude Include="camera.hpp" />
     <ClInclude Include="camera_orbit_entity.hpp" />
+    <ClInclude Include="ChessAction.hpp" />
     <ClInclude Include="ChessPiece.hpp" />
     <ClInclude Include="client.hpp" />
     <ClInclude Include="compatibility.hpp" />
