--- a/OpenGLProject/OpenGLProject.vcxproj
+++ b/OpenGLProject/OpenGLProject.vcxproj
@@ -200,7 +200,9 @@
     <ClCompile Include="camera_orbit_entity.cpp" />
     <ClCompile Include="client.cpp" />
     <ClCompile Include="fog_material.cpp" />
+    <ClCompile Include="HistoryEventLog.cpp" />
     <ClCompile Include="MissileManager.cpp" />
+    <ClCompile Include="Money.cpp" />
     <ClCompile Include="network_entity_threads.cpp" />
     <ClCompile Include="network_manager.cpp" />
     <ClCompile Include="network_message_type.cpp" />
@@ -295,7 +297,9 @@
     <ClInclude Include="compatibility.hpp" />
     <ClInclude Include="compatibility_threading.hpp" />
     <ClInclude Include="fog_material.hpp" />
+    <ClInclude Include="HistoryEventLog.h" />
     <ClInclude Include="MissileManager.h" />
+    <ClInclude Include="Money.h" />
     <ClInclude Include="network_state.hpp" />
     <ClInclude Include="network_entity_threads.hpp" />
     <ClInclude Include="network_manager.hpp" />
