--- a/OpenGLProject/OpenGLProject.vcxproj
+++ b/OpenGLProject/OpenGLProject.vcxproj
@@ -201,6 +201,7 @@
     <ClCompile Include="client.cpp" />
     <ClCompile Include="fog_material.cpp" />
     <ClCompile Include="HistoryEventLog.cpp" />
+    <ClCompile Include="menuSwap.cpp" />
     <ClCompile Include="MissileManager.cpp" />
     <ClCompile Include="Money.cpp" />
     <ClCompile Include="network_entity_threads.cpp" />
@@ -298,6 +299,7 @@
     <ClInclude Include="compatibility_threading.hpp" />
     <ClInclude Include="fog_material.hpp" />
     <ClInclude Include="HistoryEventLog.h" />
+    <ClInclude Include="menuSwap.h" />
     <ClInclude Include="MissileManager.h" />
     <ClInclude Include="Money.h" />
     <ClInclude Include="network_state.hpp" />
