--- a/OpenGLProject/OpenGLProject.vcxproj
+++ b/OpenGLProject/OpenGLProject.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="camera_orbit_entity.cpp" />
     <ClCompile Include="client.cpp" />
     <ClCompile Include="fog_material.cpp" />
+    <ClCompile Include="navigation.cpp" />
     <ClCompile Include="network_entity_threads.cpp" />
     <ClCompile Include="network_manager.cpp" />
     <ClCompile Include="network_message_type.cpp" />
@@ -283,6 +284,8 @@
     <ClInclude Include="compatibility.hpp" />
     <ClInclude Include="compatibility_threading.hpp" />
     <ClInclude Include="fog_material.hpp" />
+    <ClInclude Include="focused_panel.hpp" />
+    <ClInclude Include="navigation.hpp" />
     <ClInclude Include="network_state.hpp" />
     <ClInclude Include="network_entity_threads.hpp" />
     <ClInclude Include="network_manager.hpp" />
