--- a/OpenGLProject/OpenGLProject.vcxproj
+++ b/OpenGLProject/OpenGLProject.vcxproj
@@ -193,13 +193,13 @@
     <ClCompile Include="audio.cpp" />
     <ClCompile Include="box_range.cpp" />
     <ClCompile Include="button.cpp" />
-    <ClCompile Include="button_renderer.cpp" />
+    <ClCompile Include="button_entity.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="camera_orbit_entity.cpp" />
     <ClCompile Include="client.cpp" />
     <ClCompile Include="focused_panel.cpp" />
     <ClCompile Include="fog_material.cpp" />
-    <ClCompile Include="main_menu_button_renderer.cpp" />
+    <ClCompile Include="main_menu_button_entity.cpp" />
     <ClCompile Include="navigation.cpp" />
     <ClCompile Include="network_entity_threads.cpp" />
     <ClCompile Include="network_manager.cpp" />
@@ -243,6 +243,7 @@
     <ClCompile Include="singleton.cpp" />
     <ClCompile Include="socket.cpp" />
     <ClCompile Include="texture_manager.cpp" />
+    <ClCompile Include="text_entity.cpp" />
     <ClCompile Include="text_renderer.cpp" />
     <ClCompile Include="toggle_music.cpp" />
     <ClCompile Include="transform.cpp" />
@@ -279,7 +280,7 @@
     <ClInclude Include="audio.hpp" />
     <ClInclude Include="box_range.hpp" />
     <ClInclude Include="button.hpp" />
-    <ClInclude Include="button_renderer.hpp" />
+    <ClInclude Include="button_entity.hpp" />
     <ClInclude Include="camera.hpp" />
     <ClInclude Include="camera_orbit_entity.hpp" />
     <ClInclude Include="ChessAction.hpp" />
@@ -289,7 +290,7 @@
     <ClInclude Include="compatibility_threading.hpp" />
     <ClInclude Include="fog_material.hpp" />
     <ClInclude Include="focused_panel.hpp" />
-    <ClInclude Include="main_menu_button_renderer.hpp" />
+    <ClInclude Include="main_menu_button_entity.hpp" />
     <ClInclude Include="navigation.hpp" />
     <ClInclude Include="network_state.hpp" />
     <ClInclude Include="network_entity_threads.hpp" />
@@ -351,6 +352,7 @@
     <ClInclude Include="socket.hpp" />
     <ClInclude Include="statistic_container.hpp" />
     <ClInclude Include="stc_message_type.hpp" />
+    <ClInclude Include="text_entity.hpp" />
     <ClInclude Include="to_string.hpp" />
     <ClInclude Include="unique_init_ptr.hpp" />
     <ClInclude Include="texture_manager.hpp" />
